--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -1,1 +1,7 @@
+{% extends 'base.html' %}
+{% block title %}Source Edit{% endblock %}
+{% block content %}
+
 This source is named {{source.name}}.
+
+{% endblock content %}
