--- a/web/media/templates/media/source_list.html
+++ b/web/media/templates/media/source_list.html
@@ -12,6 +12,6 @@
     <br/>
   {% endfor %}
 {% else %}
-  No sources found. How about you try adding one?
+  No sources found. How about adding one?
 {% endif %}
 {% endblock %}
