--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <main>
+    <a href="{% url 'home' %}">Home</a>
+    &nbsp;|&nbsp; 
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}">logout</a>
     {% else %}
