--- a/web/media/templates/media/storage_edit.html
+++ b/web/media/templates/media/storage_edit.html
@@ -6,6 +6,8 @@
 {% csrf_token %}
 This storage is named {{storage.name}}.
 <br/>
+It contains a description of {{storage.description}}.
+<br/>
 It points to the path {{storage.path}}.
 <br/>
 </form>
