--- a/web/media/templates/media/source_add.html
+++ b/web/media/templates/media/source_add.html
@@ -23,7 +23,7 @@ Kind
     <br>
 {% endfor %}
 
-<input type="submit" value="Add">
+<input type="submit" value="Save">
 </form>
 
 {% endblock content %}
