About to try splitting up views into separate files.

--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -17,4 +17,9 @@ This is a {{source_kind.name}} source.
 <input type="submit" value="Save">
 </form>
 
+<form action"{% url 'media:source_sync' source_id=source.id %}" method="post">
+{% csrf_token %}
+<input type="submit" value="Sync">
+</form>
+
 {% endblock content %}
