--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -1,14 +1,15 @@
-<!-- templates/base.html -->
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %} - Mediacrity</title>
+  <link rel="stylesheet" type="text/css" href="{% static 'css/mediacrity.css' %}" />
 </head>
 <body>
   <main>
     <a href="{% url 'home' %}">Home</a>
-    &nbsp;|&nbsp; 
+    &nbsp;|&nbsp;
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}">logout</a>
     {% else %}
