Source syncing and first swing at ripme. Doesn't seem to work on imgur

--- a/web/media/templates/media/job_status.html
+++ b/web/media/templates/media/job_status.html
@@ -2,7 +2,12 @@
 {% block title %}Job Status{% endblock %}
 {% block content %}
 
-Current job status: {{ job_status.name }}. Last updated {{job.updated}}.
+Current job status: {{ job_status.name }}.
+<br/>
+Last updated {{job.updated}}.
+<br/>
+Time elapsed: {{time_elapsed}}.
+<br/>
 
 <br/>
 
