Ported transcoders from messy-scrape. Figured out how to do JOINs in django.

--- a/web/media/templates/media/job_status.html
+++ b/web/media/templates/media/job_status.html
@@ -2,7 +2,7 @@
 {% block title %}Job Status{% endblock %}
 {% block content %}
 
-Current job status: {{ job_status.name }}.
+Current job status: {{ job.status.name }}.
 <br/>
 Last updated {{job.updated}}.
 <br/>
