--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -2,7 +2,7 @@
 {% block title %}Source Edit{% endblock %}
 {% block content %}
 
-This is a {{source_kind.name}} source.
+This is a {{source.kind.name}} source.
 
 <ul>
   <li>origin_path - <a href="{{source.origin_path}}">{{source.origin_path}}</a></li>
