--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -12,6 +12,19 @@
     &nbsp;|&nbsp;
     {% if user.is_authenticated %}
       <a href="{% url 'logout' %}">logout</a>
+      &nbsp;|&nbsp;
+      <a href="{% url 'media:storage_list' %}"> Storage </a>
+      &nbsp;|&nbsp;
+      <a href="{% url 'media:source_list' %}"> Sources </a>
+      &nbsp;|&nbsp;
+      <a href="{% url 'media:job_list' %}"> Jobs </a>
+      <br/>
+      <form action="{% url 'media:search_query' %}" method="post">
+      {% csrf_token %}
+      <input name="query" value="">
+      <input type="submit" value="Search">
+      </form>
+      <br/>
     {% else %}
       <a href="{% url 'login' %}">login</a>
     {% endif %}
