--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -26,21 +26,26 @@ This is a {{source.kind.name}} source.
 <input type="submit" value="Sync">
 </form>
 
-{% if job %}
-<br/>
-<a href="{% url 'media:job_status' job_id=job.id %}">Latest related job - {{job.status.name}}</a>
-{% endif %}
-<br/>
 {% if media %}
+<br/>
+Media
+  <div>
   {% for item in media %}
-    <div>
       <div key={index} className="fluid-container">
         {% include "media/comp/media_preview.html" with media=item only %}
       </div>
-    </div>
   {% endfor %}
+  </div>
 {% else %}
 No media found for this source. Try running a sync.
 {% endif %}
 
+{% if jobs %}
+{% for job in jobs %}
+<br/>
+Jobs
+<br/>
+<a href="{% url 'media:job_status' job_id=job.id %}">Job {{job.id}} - {{job.status.name}} - {{job.completed}}</a>
+{% endfor %}
+{% endif %}
 {% endblock content %}
