Youtube-dl ripper, media overview, random button, convert react code from messy to html

--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -17,7 +17,11 @@
       &nbsp;|&nbsp;
       <a href="{% url 'media:source_list' %}"> Sources </a>
       &nbsp;|&nbsp;
+      <a href="{% url 'media:media_list' %}"> Media </a>
+      &nbsp;|&nbsp;
       <a href="{% url 'media:job_list' %}"> Jobs </a>
+      &nbsp;|&nbsp;
+      <a href="{% url 'media:media_random' %}"> Random </a>
       <br/>
       <form action="{% url 'media:search_query' %}" method="post">
       {% csrf_token %}
