--- a/web/media/templates/media/comp/media_preview.html
+++ b/web/media/templates/media/comp/media_preview.html
@@ -1,15 +1,18 @@
 {% load static %}
-<div className="fluid-container">
+<div class="fluid-container">
   <a href="{% url 'media:media_view' media_id=media.id %}">
-      <div className="preview-container">
-        <div className="image">
+      <div class="preview-container">
+        <div class="image">
           <img src={% static media.web_thumbnail_path %} alt="{{media.content_hash}}" title="{{media.content_hash}}" />
         </div>
         {% if media.extension == 'mp4' %}
-          <div className="top-overlay">VIDEO</div>
+          <div class="top-overlay">VIDEO</div>
         {% elif media.extension == 'webm' %}
-          <div className="top-overlay">WEBM</div>
+          <div class="top-overlay">WEBM</div>
         {% endif %}
+        <div class="bottom-overlay">
+        {{media.byte_size}}
+        </div>
       </div>
   </a>
 </div>
