--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -31,7 +31,7 @@ This is a {{source.kind.name}} source.
 Media
   <div>
   {% for item in media %}
-      <div key={index} className="fluid-container">
+      <div key={index} class="fluid-container">
         {% include "media/comp/media_preview.html" with media=item only %}
       </div>
   {% endfor %}
