--- a/web/media/templates/media/source_list.html
+++ b/web/media/templates/media/source_list.html
@@ -15,7 +15,7 @@
 Found {{sources.count}} {{mode}} sources.
 <br/><br/>
   {% for source in sources %}
-    <a href="{% url 'media:source_edit' source_id=source.id %}">{{source.id}} - {{source.kind.name}} - {{ source.name }} - {{source.legacy_v1_id}}</a>
+    <a href="{% url 'media:source_edit' source_id=source.id %}">{{source.id}} - {{source.kind.name}} - {{ source.name }} - {{source.legacy_v1_id}} - {{source.origin_path}}</a>
     <br/>
   {% endfor %}
 {% else %}
