--- a/web/media/static/css/mediacrity.css
+++ b/web/media/static/css/mediacrity.css
@@ -1,10 +1,6 @@
-input{
-  width: 400px;
-}
-
 body {
-  margin: 5px;
-  padding: 5px;
+  margin: 0;
+  padding: 0;
   font-family: sans-serif;
 }
 
