--- a/web/media/templates/media/media_view.html
+++ b/web/media/templates/media/media_view.html
@@ -1,14 +1,22 @@
+{% extends 'base.html' %}
 {% load static %}
-<div className="media-container">
+{% block title %}Job Status{% endblock %}
+{% block content %}
+
+<a href="{% url 'media:source_edit' source_id=media.source_id%}">Source</a>
+
+<div class="media-container">
   {% if media.extension == 'mp4' %}
-    <video controls autoPlay className="media">
+    <video controls autoplay class="media">
       <source src={% static media.web_content_path %} type="video/mp4"/>
     </video>
   {% elif media.extension == 'webm' %}
-    <video controls autoPlay className="media">
+    <video controls autoplay loop class="media">
       <source src={% static media.web_content_path %} type="video/mp4"/>
     </video>
   {% else %}
-    <img className="media" src={% static media.web_content_path %} alt="{{media.content_hash}}" />
+    <img class="media" src={% static media.web_content_path %} alt="{{media.content_hash}}" />
   {% endif %}
 </div>
+
+{% endblock content %}
