--- a/web/media/templates/media/comp/media_preview.html
+++ b/web/media/templates/media/comp/media_preview.html
@@ -3,7 +3,7 @@
   <a href="{% url 'media:media_view' media_id=media.id %}">
       <div class="preview-container">
         <div class="image">
-          <img src={% static media.web_thumbnail_path %} alt="{{media.content_hash}}" title="{{media.content_hash}}" />
+          <img src={% static media.web_thumbnail_path %} alt="{{media.sort_order}}-{{media.content_hash}}" title="{{media.sort_order}}-{{media.content_hash}}" />
         </div>
         {% if media.extension == 'mp4' %}
           <div class="top-overlay">VIDEO</div>
