Media filtering. Use nginx for static content.
django was choking on video seek. Replaced its static handler with an isntance of nginx, works great now.

--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -1,10 +1,10 @@
-{% load static %}
+{% load content %}
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %} - Mediacrity</title>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/mediacrity.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% asset 'css/mediacrity.css' %}" />
 </head>
 <body>
   <div class="page-container">
