Make random button choose between sources, instead of favoring media heavy sources. Improve imgur animation download

--- a/web/media/templates/media/source_edit.html
+++ b/web/media/templates/media/source_edit.html
@@ -9,6 +9,7 @@ This is a {{source.kind.name}} source.
   <li>discussion_path - <a href="{{source.discussion_path}}">{{source.discussion_path}}</a></li>
   <li>content_path - <a href="file:///{{source.content_path}}">{{source.content_path}}</a></li>
   <li>sort_order - {{source.sort_order}}</li>
+  <li>hash - {{source.legacy_v1_id}}</li>
 </ul>
 
 {% if album %}
