--- a/web/media/templates/media/media_view.html
+++ b/web/media/templates/media/media_view.html
@@ -28,7 +28,9 @@
 </div>
 
 <br/>
-
+<br/>
+Direct Link: <a href={% media media.web_content_path %}"">{% media media.web_content_path %}</a>
+<br/>
 Extract Path: {{media.extract_path}}
 <br/>
 Transform Path: {{media.transform_path}}
