--- a/asset/css/mediacrity.css
+++ b/asset/css/mediacrity.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 15px 15px;
   padding: 0;
   font-family: sans-serif;
 }
@@ -70,7 +70,7 @@ body {
 
 img {
     max-width: 100%;
-    max-height: 800px;
+    max-height: 700px;
     display: block;
     margin: 0 auto;
 
