Attempt at using metadata for origin date. Job requeue

--- a/web/media/templates/media/job_view.html
+++ b/web/media/templates/media/job_view.html
@@ -9,6 +9,11 @@ Last updated {{job.updated}}.
 Time elapsed: {{time_elapsed}}.
 <br/>
 
+<form action="{% url 'media:job_requeue' job_id=job.id %}" method="post">
+{% csrf_token %}
+<input type="submit" value="Requeue">
+</form>
+
 <br/>
 
 Job logs
