View and edit custom links

--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -21,6 +21,7 @@
       <a href="{% url 'media:source_list' %}"><button>Sources</button></a>
       <a href="{% url 'media:media_list' %}"><button>Media</button></a>
       <a href="{% url 'media:job_list' %}"><button>Jobs</button></a>
+      <a href="{% url 'media:link_list' %}"><button>Links</button></a>
       <a href="{% url 'media:media_random' %}"><button>Random</button></a>
       <br/>
       <form action="{% url 'media:search_query' %}" method="post">
