--- a/web/media/templates/home.html
+++ b/web/media/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-  <p>Use the links at the top. Make sure to unlock any locked storage before anything else.</p>
+  <p>Make sure to unlock any locked storage before anything else.</p>
 {% else %}
   <p>You are not logged in</p>
 {% endif %}
