--- a/web/media/templates/media/media_list.html
+++ b/web/media/templates/media/media_list.html
@@ -9,9 +9,13 @@
 <a href="{% url 'media:media_list' kind='image' %}"><button>Image</button></a>
 {% if media.has_previous %}
   <a href="{% url 'media:media_list' kind=kind page=media.previous_page_number %}"><button>Page -</button></a>
+{% elif media.paginator.num_pages > 1 %}
+  <a href="{% url 'media:media_list' kind=kind page=media.paginator.num_pages %}"><button>Page -</button></a>
 {% endif %}
 {% if media.has_next %}
   <a href="{% url 'media:media_list' kind=kind page=media.next_page_number %}"><button>Page +</button></a>
+{% elif media.paginator.num_pages > 1 %}
+  <a href="{% url 'media:media_list' kind=kind page=1 %}"><button>Page +</button></a>
 {% endif %}
 <br/>
 Found {{media.paginator.count}} media showing page {{page}} of {{media.paginator.num_pages}}.
