Vid thumbnails were enormous with new faster gen method.
Use a hybrid approach for the best of both worlds.

Also reoslve an issue with Rabbit closing connections on long running jobs.

--- a/web/media/templates/base.html
+++ b/web/media/templates/base.html
@@ -23,6 +23,7 @@
       <a href="{% url 'media:job_list' %}"><button>Jobs</button></a>
       <a href="{% url 'media:link_list' %}"><button>Links</button></a>
       <a href="{% url 'media:media_random' %}"><button>Random</button></a>
+      <a href="{% url 'media:media_admin' %}"><button>Admin</button></a>
       <br/>
       <form action="{% url 'media:search_query' %}" method="post">
       {% csrf_token %}
